--- a/mensaje.html
+++ b/mensaje.html
@@ -156,7 +156,7 @@
         <!-- Pantalla 1 -->
         <section class="screen active" id="screen1">
             <h1>💖 HOLA MI VIDA ALEJANDRA 💖</h1>
-            <p>Se que no es mucho este programa per opuede hacer algo con la programacion</p>
+            <p>Se que no es mucho este programa pero puede hacer algo con la programacion</p>
             <p>es bueno hacer MUCHAS COSAS PARA TI porque te lo mereces</p>
             <p>Voy Aqui con mi mini aliente con algo nuevo</p>
             <div style="font-size: 50px; margin-top: 20px;">😊</div>
@@ -178,7 +178,7 @@
         <section class="screen" id="screen3">
             <h1>💖LAS SEGUNDAS OPORTUNIDADES💖</h1>
             <p>
-                Sabemos que no fue le año esperado pero la esperanza no se va❤️
+                Sabemos que no fue el año esperado pero la esperanza no se va eres alguien super❤️
             </p>
             <p>tu tienes mucho que dar por ti y por tu futuro yo estare ahi contigo</p>
             <p>no se ignifica que me elejare puede pasar muchas cosas mi vida</p>
