--- a/mensaje.html
+++ b/mensaje.html
@@ -195,6 +195,7 @@
                 BUENO aqui va la ultima ventana te quiro desear un FELIZ CUMPLE MI VIDA  ❤️
             </p>
             <p>PASALA SUPER BIEN ES ESTE DIA PARA TI BESITO PARA TI </p>
+            <p>Psdt: EL BOTON DE CERRAR NO DA CARITA TRISTE </p>
             <button onclick="showKiss()">Enviar beso</button>
             <button onclick="showConfettiPopup()">Abrir sorpresa</button>
             <a href="index.html" class="back-button">Regresar al inicio</a>
